<!--
  ~ Copyright (c) 2020. Michael Erichsen.
  ~
  ~ The program is distributed under the terms of the GNU Affero General Public License v3.0
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToiletPaper</string>
    <string name="nav_header_title">Toiletpapir</string>
    <string name="nav_header_subtitle">info@myerichsen.net</string>
    <string name="action_settings">Indstillinger</string>
    <string name="menu_home">Toiletpapir</string>

    <string name="about_intro">
        \nDette er en prototype til et supermarkedsprogram, der skal kunne sammenligne produkter.
        \n\nI første omgang behandler det toiletpapir.\n\n
        Indtast de data, du kender, og lad programmet beregne resten.\n\n
        Du kan bruge telefonens kamera til at scanne QR- og stregkoder.\n\n
        Programmet kan gemme dine data i en database på telefonen.
        Ingen data udveksles med servere, klude eller andre fremmede enheder.\n\n
        Der er seks menupunkter:\n
        * Toiletpapir\n
        * Sammenligning\n
        * Prisudvikling\n
        * Produktliste\n
        * Butiksliste\n
        * Om\n\n
        Programmet bruger adgang til kameraet for at scanne streg- og QR-koder.\n
        Det bruger adgang til telefonens filer for at indlæse præfabrikerede data om butikker og
        produkter.\n\n
    </string>
    <string name="about_included_jars1">
        Dette program anvender\n
        * Opencsv (Apache 2.0 licens)
    </string>
    <string name="about_included_jars2">
        https://sourceforge.net/projects/opencsv
    </string>
    <string name="about_included_jars3">
        * Graphview (Apache 2.0 licens)
    </string>
    <string name="about_included_jars4">
        https://github.com/jjoe64/GraphView
    </string>
    <string name="action_calculate">Beregn</string>
    <string name="action_save">Gem</string>
    <string name="action_pricerunner">Pricerunner</string>
    <string name="action_productdata">Produktliste</string>
    <string name="action_supplier_list">Butiksliste</string>
    <string name="action_about">Om</string>
    <string name="layers">Lag</string>
    <string name="package_rolls">Ruller pr. pakke</string>
    <string name="count">Antal</string>
    <string name="roll_sheets" tools:ignore="Typos">Ark pr. rulle</string>
    <string name="sheet_width">Arkbredde</string>
    <string name="mm">mm</string>
    <string name="sheet_length">Arklængde</string>
    <string name="calculated">Beregnet</string>
    <string name="roll_length">Rullelængde</string>
    <string name="m">meter</string>
    <string name="package_price">Pris pr. pakke</string>
    <string name="kr">kr.</string>
    <string name="gm2">g pr. m2</string>
    <string name="paper_weight">Papirvægt</string>
    <string name="kilo_price">Kilopris</string>
    <string name="comment">Kommentar</string>
    <string name="menu_about">Om</string>
    <string name="about_heading">\nInspiration, kilder og kodestumper er planket fra\n\n</string>
    <string name="scan">Scan</string>
    <string name="search">Søg</string>
    <string name="meter_price">Pris pr. meter</string>
    <string name="menu_products">Produkter</string>
    <string name="menu_suppliers">Butikker</string>
    <string name="scan_prompt">Scan en stregkode eller QR-kode.</string>
    <string name="supplier">Butik</string>
    <string name="roll_price" tools:ignore="Typos">Pris pr. rulle</string>
    <string name="home_fragment_save_message">Produktet er gemt på telefonen</string>
    <string name="compare">Sammenligning</string>
    <string name="menu_compare">Sammenlign</string>
    <string name="menu_product_details">Produktdetaljer</string>
    <string name="compare_filter">\n\nFiltrer butikker</string>
    <string name="compare_key">\n\nVælg sorteringsnøgle</string>
    <string name="product_fragment_prompt">Klik på en række for at se detaljer\n\n</string>
    <string name="paperWeightRb">Papirvægt (g pr. m2)</string>
    <string name="kiloPriceRb">Kilopris</string>
    <string name="meterPriceRb">Meterpris</string>
    <string name="sheetPriceRb">Pris pr. ark</string>
    <string name="sortListPrompt">\n\nKlik for at se sorteret liste</string>
    <string name="clickToDelete">Klik her for at slette</string>
    <string name="no_products_found">Der er ikke fundet nogen produkter</string>
    <string name="invalid_sort_key">Ugyldig sorteringsnøgle: </string>
    <string name="supplier_fragment_prompt">Klik for at oprette eller slette en butik</string>
    <string name="timestamp">Timestamp</string>
    <string name="chain">Kæde</string>
    <string name="add">Tilføj</string>
    <string name="delete">Slet</string>
    <string name="supplier_added">Butik tilføjet</string>
    <string name="initial_load_done">Præfabrikerede data indsat</string>
    <string name="found_brands">Fundne varemærker</string>
    <string name="enter_brand_prompt">Indtast et varemærke eller begyndelsen af det</string>
    <string name="itemno_not_found">Varenummer ikke fundet i databasen</string>
    <string name="calculation_failed">Beregning lykkedes ikke</string>
    <string name="calculation_suceeded">Beregninger foretaget</string>
    <string name="brand_not_found">Varemærke ikke fundet</string>
    <string name="title_activity_settings">Indstillinger</string>
    <string name="supplier_deleted">Butik slettet</string>
    <string name="nav_header_desc">Navigationsoverskrift</string>
    <string name="version_text">Toiletpapir\nVersion %1$s</string>
    <string name="toiletpaper">Toiletpapir</string>
    <string name="priceDevelopment">Prisudvikling</string>
    <string name="sheetPrice">Pris pr. ark</string>
    <string name="help">Hjælp</string>
    <string name="OK">OK</string>
    <string name="default_help_text">Hjælp kaldt fra %1$s</string>
    <string name="fontsize_preference_summary">Skriftstørrelse: </string>
    <string name="label_sorted_product_list">Sorteret produktliste</string>
    <string name="label_supplier_details">Butiksdetaljer</string>
    <string name="label_prices_graph">Prisudvikling, grafisk</string>
    <string name="label_prices_select">Prisudvikling, valg vare</string>
    <string name="label_price_development">Prisudvikling</string>
    <string name="price_development">Prisudvikling</string>
    <string name="package_price_kr">Pris i kr. pr. pakke</string>
    <string name="filter_itemno_or_brand">Filtrér varenumre eller varemærker</string>
    <string name="item_no">Varenummer</string>
    <string name="brand">Varemærke</string>
    <string name="select">Vælg</string>
    <string name="graph">Graf</string>
    <string name="about_help_text">
        Forklaring til programmet. Her findes også programmets version, hvis der skal
        rapporteres fejl eller ønsker til udvidelse.</string>
    <string name="products_help_text">
        Oversigt over kendte produkter.\n
        Kolonnerne viser varemærke og varenummer samt løbenummer,
        som er produktets entydige identifikation i databasen.\n
        Detaljer for produktet vises ved klik på en række.</string>
    <string name="suppliers_help_text">
        Oversigt over kendte butikker.\n
        Kolonnerne viser butik og kæde. Kæde er medtaget for senere at kunne linke direkte
        til kædernes egne produktbeskrivelser på nettet.\n
        Detaljer for butikken vises ved klik på en række.</string>
    <string name="price_list_help_text">
        Oversigt over prisudviklingen for dette produkt.\n
        For hvert tidspunkt angives varenummer, varemærke, pris pr. pakke og timestamp.\n
        Detaljer for produktet vises ved klik på en række.
    </string>
    <string name="home_help_text">
        Hovedbillede for programmet.\n
        Indtast alle kendte data og klik på beregn nederst på billedet.\n
        Varenummer kan scannes eller slås op i databasen.\n
        Varemærke kan slås op i databasen.\n
        Hvis varenummer eller varemærke ikke er komplet eller entydigt, vises et valgbillede.
        Hvis det er fundet og entydigt, vises alle data fra databasen.\n
        Manglende værdier beregnes ved tryk på beregningsknappen.
        Beregnede værdier markeres som sådan. Ved indtastning fjernes markeringen.\n
        De indtastede data gemmes med gemmeknappen nederst.\n
        Der kan foretages opslag på varemærket hos Google med Googleknappen.\n
        Der kan foretages opslag på toiletpapir generelt hos Pricerunner med Pricerunnerknappen.\n
        Antallet af felter på billedet styres med indstilingen \"Avanceret inddataformat\".
    </string>
    <string name="scan_help_text">Scan en stregkode eller QR-kode.\n
        Telefonen vil bippe, og koden vil blive vist nedenfor.\n
        Koden indsættes i hovedbilledet, og der søges efter denne i databasen.
    </string>
    <string name="brand_list_help_text">Oversigt over fundne varemærker.\nVed valg af en række
        returneres denne til hovedbilledet, og der søges efter denne i databasen.
    </string>
    <string name="item_no_list_help_text">Oversigt over fundne varenumre.\nVed valg af en række
        returneres denne til hovedbilledet, og der søges efter denne i databasen.</string>
    <string name="supplier_details_home_help_text">
        Detaljer for en butik.\n
        Herfra kan en ny butik oprettes i databasen, eller den viste kan slettes.\n
        Bemærk, at oversigtsbilledet skal genopfriskes, for at ændringen slår igennem.
    </string>
    <string name="prices_graph_help_text">
        Prisudvikling, grafisk.\n
        Grafen viser prisudviklingen med dato som X-akse og beløb i kr. pr. pakke som Y-akse.
    </string>
    <string name="prices_select_help_text">
        Valgbillede for prisudvikling.\n
        Indtast enten et varenummer eller et varemærke, helt eller delvist.
        Hvis det ikke er komplet eller entydigt, vises et valgbillede.\n
        Klik vil vise prisudviklingen, enten som tabel eller som graf.\n
        Varenummer "test" kan bruges til at vise testdata.
    </string>
    <string name="product_details_help_text">
        Produktdetaljer.\n
        Alle værdier for det valgte produkt.\n
        Herfra kan et produkt slettes fra databasen. Bemærk, at løbenummeret er entydigt nøglefelt i
        databasen, men ikke relaterer til produktet.
    </string>
    <string name="sorted_product_list_help_text">
        Sorteret produktliste.\n
        Alle produkter i databasen, filtreret med det valgte butiksfilter, og sorteret efter den
        valgte sorteringsnøgle.\n
        Detaljer for produktet vises ved klik på en række.
    </string>
    <string name="compare_help_text">
        Sammenlign.\n
        Butikker kan filtreres med filteringsnøglen øverst.\n
        Sorteringsnøgle vælges nedenfor.\n
        Sorteringsnøglen huskes til næste gang.\n
        Klik på den grønne linje nederst for at se den sorterede liste.
    </string>
    <string name="g_per_roll" tools:ignore="Typos">g pr. rulle</string>
    <string name="roll_weight">Rullevægt</string>
    <string name="please_be_a_patient">Vent venligst, mens data indsættes</string>
    <string name="found_item_numbers">Fundne varenumre</string>
    <string name="enter_itemno_prompt">Indtast et varenummer eller begyndelsen af det</string>
    <string name="google_search">Google søgning</string>
    <string name="sorted_prices">Sorterede priser</string>
    <string name="empty_table">Tabellen er tom</string>
    <string name="preferred_supplier">Foretrukken butik: </string>
    <string name="package_weight">Pakkevægt</string>
    <string name="kg">kg</string>
</resources>
